# gcp-mlops-demo

./: .gitignore  LICENSE  README.md  constraints.txt  pyproject.toml  setup.cfg
data/: sample.csv
notebooks/: 01-tip-toe-vertex-ai.ipynb
src/trainer/: batch.py  pipeline.py  task.py
tests/unittests/: test_features.py
