[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-mlops-demo"
version = "0.8.0.dev0"
description = "An example project for doing MLOps on Vertex AI"
authors = [{ name = "Murat Eken", email = "meken@google.com" }]
readme = "README.md"
urls = { repository = "https://github.com/meken/gcp-mlops-demo" }
license = { file = "LICENSE" }

requires-python = ">=3.7"
dependencies = [
    "scikit-learn",
    "pandas"
]

[project.optional-dependencies]
gcp = [
    "kfp",
    "google-cloud-aiplatform",
    "google-cloud-pipeline-components",
]
interactive = [
    "matplotlib",
    "seaborn",
    "pandas-gbq",
    "gcsfs",
    "pyarrow"
]
dev = [
    "build",
    "flake8-pyproject",
    "pytest",
    "coverage"
]

[tool.flake8]
max-line-length = 120
exclude = [".venv", "build"]

[tool.pytest.ini_options]
addopts = "-W ignore::DeprecationWarning"
markers = ["unit: Marks tests as unittests"]

[tool.coverage.run]
disable_warnings = ["no-data-collected"]
