[metadata]
name=gcp-mlops-demo
version=0.7.0.dev0
description=An example project for doing MLOps on Vertex AI
author=Murat Eken
author_email=meken@google.com
url=https://github.com/meken/gcp-mlops-demo

[options]
package_dir=
     =src
packages=find:
python_requires=>=3.7
install_requires=
    scikit-learn
    pandas

[options.packages.find]
where=src

[options.extras_require]
gcp=
    kfp
    google-cloud-aiplatform
    google-cloud-pipeline-components
interactive=
    jupyter
    matplotlib
dev=
    flake8
    pytest
    coverage

[flake8]
max-line-length=120
max-complexity=10
exclude=.venv

[tool:pytest]
addopts=-W ignore::DeprecationWarning
markers=
    unit: Marks tests as unittests

[coverage:run]
disable_warnings=no-data-collected
